<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_nav_graph"
    app:theme="@style/NavigationDrawerStyle"
    app:startDestination="@id/btnHome">

    <fragment
        android:id="@+id/btnHome"
        android:name="com.jadeeer.jadeeercaptinapp.Fragments.HomeFragment"
        android:label="Home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/btnSetting"
        android:name="com.jadeeer.jadeeercaptinapp.Fragments.OrdersFragment"
        android:label="@string/orders"
        tools:layout="@layout/fragment_orders">
        <action
            android:id="@+id/action_btnSetting_to_emailConfirmationFragment"
            app:destination="@id/emailConfirmationFragment" />
    </fragment>
    <fragment
        android:id="@+id/btnSavedPlaces"
        android:name="com.jadeeer.jadeeercaptinapp.Fragments.OrderBookFragment"
        android:label="@string/book_order"
        tools:layout="@layout/fragment_book" />
    <fragment
        android:id="@+id/emailConfirmationFragment"
        android:name="com.jadeeer.jadeeercaptinapp.Fragments.WaletFragment"
        android:label="@string/wallet"
        tools:layout="@layout/fragment_wallet">
    </fragment>
    <fragment
        android:id="@+id/btnProfile"
        android:name="com.jadeeer.jadeeercaptinapp.Fragments.ProfileFragment"
        android:label="fragment_email_change"
        tools:layout="@layout/fragment_profile" />
    <fragment
        android:id="@+id/btnNotification"
        android:name="com.jadeeer.jadeeercaptinapp.Fragments.NotiyFragment"
        android:label="notifications"
        tools:layout="@layout/fragment_notiy" />

    <fragment
        android:id="@+id/btnEvaluation"
        android:name="com.jadeeer.jadeeercaptinapp.Fragments.EvaluationFragment"
        android:label="@string/book_order"
        tools:layout="@layout/fragment_evaluation" />

    <fragment
        android:id="@+id/btnBankInformation"
        android:name="com.jadeeer.jadeeercaptinapp.Fragments.BankInformationFragment"
        android:label="@string/bank_information"
        tools:layout="@layout/fragment_bank_information" />

    <fragment
        android:id="@+id/btnSettings"
        android:name="com.jadeeer.jadeeercaptinapp.Fragments.SettingsFragment"
        android:label="@string/setting"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/btnSupport"
        android:name="com.jadeeer.jadeeercaptinapp.Fragments.SupportFragment"
        android:label="@string/orders"
        tools:layout="@layout/fragment_support" />
</navigation>