<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical"
    tools:context=".Activities.LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/logo"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:padding="10dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="155dp"
            android:background="@drawable/icons_bar"
            android:src="@drawable/icons_bar" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:layout_below="@+id/logo"
            android:textColor="@color/black"
            android:textSize="20dp"
            android:layout_height="wrap_content"
            android:text="@string/app_name"/>

    </RelativeLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="50dp"
        android:layout_weight="1.4"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:id="@+id/txtPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:drawableStart="@drawable/ic_phone"
            android:drawablePadding="16dp"
            android:drawableTint="@color/primaryDarkColor"
            android:hint="@string/phone_number"
            android:padding="14dp"
            android:textColor="@color/primaryDarkColor"
            android:textColorHint="@color/primaryDarkColor" />

        <EditText
            android:id="@+id/txtPassword"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:drawableStart="@drawable/ic_lock"
            android:drawablePadding="16dp"
            android:drawableTint="@color/primaryDarkColor"
            android:hint="@string/password"
            android:padding="14dp"
            android:textColor="@color/primaryDarkColor"
            android:textColorHint="@color/primaryDarkColor" />


        <TextView
            android:id="@+id/txtForgetPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="30dp"
            android:text="هل نسيت كلمة المرور"
            android:textColor="@color/primaryColor"
            android:textSize="13dp" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:background="@drawable/button_scoanry"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="10dp"
            android:padding="9dp"
            android:text="دخول"
            android:textStyle="bold"
            app:cornerRadius="20dp"
            app:elevation="10dp" />

        <Button
            android:id="@+id/btnSignUp"
            android:layout_width="match_parent"
            android:background="@drawable/button_scoanry"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="10dp"
            android:padding="9dp"
            android:text="انشاء حساب كابنن"
            android:textStyle="bold"
            app:cornerRadius="20dp"
            app:elevation="10dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:gravity="center"
            android:orientation="horizontal">

            <View
                android:layout_width="120dp"
                android:layout_height="1dp"
                android:background="@color/primaryColor" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:text="."
                android:textColor="@color/primaryColor" />

            <View
                android:layout_width="120dp"
                android:layout_height="1dp"
                android:background="@color/primaryColor" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="جميع الحقوق محفوطة لدي شركة تطبيق جدير"/>


    </LinearLayout>
    </ScrollView>

</LinearLayout>
