<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.VerificationCodeActivity">



    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">


            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_marginTop="80dp"
                android:src="@drawable/icons_bar" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="16dp"
                android:text="@string/app_name"

                android:textAlignment="center"
                android:textColor="@color/primaryColor"
                android:textSize="28sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/otp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/enter_verify_code"
                android:layout_marginBottom="12dp"
                android:textStyle="bold"
                android:textColor="@color/primaryDarkColor"
                android:layout_marginTop="12dp"
                android:lineSpacingExtra="6dp"
                android:textAlignment="center"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:weightSum="100">




                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="8dp"
                    android:layout_weight="16.66"
                    android:background="#f6f6f6">

                    <EditText
                        android:id="@+id/otp_box_1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/edit_text_rac"
                        android:hint="&#x2731;"
                        android:inputType="number"
                        android:maxLength="1"
                        android:padding="12dp"
                        android:textAlignment="center"
                        android:textColor="#000000"
                        android:textColorHint="#c7c7c8"
                        android:textSize="16sp" />

                </LinearLayout>



                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="8dp"
                    android:layout_weight="16.66"
                    android:background="#f6f6f6">

                    <EditText
                        android:id="@+id/otp_box_2"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/edit_text_rac"
                        android:hint="&#x2731;"
                        android:inputType="number"
                        android:maxLength="1"
                        android:padding="12dp"
                        android:textAlignment="center"
                        android:textColor="#000000"
                        android:textColorHint="#c7c7c8"
                        android:textSize="16sp" />

                </LinearLayout>



                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="8dp"
                    android:layout_weight="16.66"
                    android:background="#f6f6f6">

                    <EditText
                        android:id="@+id/otp_box_3"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/edit_text_rac"
                        android:hint="&#x2731;"
                        android:inputType="number"
                        android:maxLength="1"
                        android:padding="12dp"
                        android:textAlignment="center"
                        android:textColor="#000000"
                        android:textColorHint="#c7c7c8"
                        android:textSize="16sp" />

                </LinearLayout>



                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="8dp"
                    android:layout_weight="16.66"
                    android:background="#f6f6f6">

                    <EditText
                        android:id="@+id/otp_box_4"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/edit_text_rac"
                        android:hint="&#x2731;"
                        android:inputType="number"
                        android:maxLength="1"
                        android:padding="12dp"
                        android:textAlignment="center"
                        android:textColor="#000000"
                        android:textColorHint="#c7c7c8"
                        android:textSize="16sp" />

                </LinearLayout>


                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="16.66"
                    android:layout_marginLeft="8dp"
                    android:background="#f6f6f6">

                    <EditText
                        android:id="@+id/otp_box_5"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/edit_text_rac"
                        android:hint="&#x2731;"
                        android:inputType="number"
                        android:maxLength="1"
                        android:padding="12dp"
                        android:textColor="#000000"
                        android:textAlignment="center"
                        android:textColorHint="#c7c7c8"
                        android:textSize="16sp" />
                </LinearLayout>


            </LinearLayout>



            <Button
                android:id="@+id/btn_verify"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="1dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="24dp"
                android:background="@drawable/button_scoanry"
                android:text="@string/verfication"
                android:textAllCaps="false"
                android:textColor="#ffffff"
                android:textSize="18sp" />
        </LinearLayout>


    </ScrollView>



</LinearLayout>